
Moqui Framework Release Notes

===========================================================================
Release 1.2.1 - TBD 2013
===========================================================================

Moqui Framework 1.2.1 is a minor new feature and bug fix release... TODO

New Features:

- Updated gradle build files to work with Gradle 1.3
- Updated Commons Validator to 1.4.0
- Added XML Form fields-not-referenced element to specify where to render
  the fields not explicitly referenced under the field-layout element
- Small adjustment to transition parameter so that if explicitly defined as
  empty that will be used instead of defaulting to value from context or
  web parameters
- Improved date/time and number parsing for String values passed to an
  entity, partly so that implicit entity-auto services are more usable
- Screen transition response plain URLs now assemble parameters using
  response parameter subelements
- Improved form-list with form-list-column so that hidden fields are always
  rendered along with the form element
- Added span with id for form-list cell display fields and classes on it
  for currency and field value Java classes (BigDecimal, Timestamp, etc)
  plus CSS to center numbers and right align currency amounts
- Added XML Form field widget element auto-widget-service and
  auto-widget-entity to do the same thing as auto-fields-* except that
  they are applied to a single field for more granular control without a
  bunch of ignores
- Added dynamic-dialog element to XML Screens; like the container-dialog
  element but loads the dialog contents from the server when opened
- Added form-list.@paginate-always-show attribute, defaults to true; set
  to false to hide pagination control and row count when there is only
  one page of rows to display; SourceForge feature request #8
- Added widget-templates file and widget-template-include element under
  XML Form fields to include widget-templates for widget reuse