@@ -10,6 +10,8 @@
         <cache name="entity.definition" expire-time-idle="0" expire-time-live="0" max-elements="1000"/>
         <cache name="entity.location" expire-time-idle="0" expire-time-live="0" max-elements="1000"/>
         <cache name="entity.tables.checked" expire-time-idle="0" expire-time-live="0" max-elements="1000"/>
+        <!-- this is info for each entity for real-time push DataFeeds; expires every 15 min to get DataFeed and DataDocument updates -->
+        <cache name="entity.data.feed.info" expire-time-idle="0" expire-time-live="900" max-elements="1000"/>
 
         <cache name="service.location" expire-time-idle="0" expire-time-live="0" max-elements="10000"/>
         <cache name="service.java.class" expire-time-idle="0" expire-time-live="0" max-elements="10000"/>
