@@ -9,6 +9,7 @@
         <cache name="entity.definition" expire-time-idle="30"/>
         <!-- longer timeout since this basically looks through all files to check for new or moved entity defs -->
         <cache name="entity.location" expire-time-idle="300"/>
+        <cache name="entity.data.feed.info" expire-time-idle="300"/>
 
         <cache name="service.location" expire-time-idle="5"/>
         <cache name="service.java.class" expire-time-idle="5"/>
